--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <object
   type="text/html"
-  data="/.netlify/functions/api"
+  data="/.netlify/functions/index"
   style="width:100%;height:100%;"
 >
